--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>HN Personal Websites</h1>
-    <div>(17 websites)</div>
+    <div>(18 websites)</div>
     <main>
       <section>
         <h2>Alex Narayan</h2>
@@ -161,6 +161,15 @@
         <p>Creator of Datasette and co-creator of Django.</p>
       </section>
       <section>
+        <h2>Steven DeGraeve</h2>
+        <nav>
+          <a href="https://www.degraeve.com/">Website</a>
+          <a href="https://www.degraeve.com/about/">About</a>
+          <a href="https://www.degraeve.com/blog/">Blog</a>
+        </nav>
+        <p>Develops tools and generative art.  Writes about software and building websites.</p>
+      </section>
+      <section>
         <h2>Susam Pal</h2>
         <nav>
           <a href="https://susam.net/">Website</a>
@@ -194,7 +203,7 @@
         personal websites by active members of the HN community.
       </p>
       <p>
-        Last updated on Wed, 14 Jan 2026 21:28:45 UTC.
+        Last updated on Wed, 14 Jan 2026 21:36:50 UTC.
       </p>
     </footer>
   </body>
